--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="https://png.pngtree.com/png-vector/20210525/ourmid/pngtree-blood-drop-png-image_3328637.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aimodosia Online</title>
 </head>
